appeal meme page

--- a/assets/html/appeal.html
+++ b/assets/html/appeal.html
@@ -6,14 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/local/css/main">
-    <title>gooch.dev | Home</title>
+    <title>gooch.dev | Appeal</title>
 </head>
 
 <body>
 
     <canvas id="canvas"></canvas>
 
-    <script src="/assets/local/js/bg"></script>
+    <div class="main">
+        <h2 class="center">
+            This is a joke please don't take it seriously.
+        </h2>
+    </div>
+    <script src="/assets/local/js/bg">
+    </script>
 
 </body>
 
