--- a/assets/html/appeal.html
+++ b/assets/html/appeal.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/local/css/main">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/local/css/main" />
     <title>gooch.dev | Appeal</title>
 </head>
 
 <body>
-
     <canvas id="canvas"></canvas>
 
     <div class="main">
         <h2 class="center">
-            This is a joke please don't take it seriously.
+            This is a joke please don't take it seriously. <br />
+            <br /> I will return in <br />
+            <span id="countdown"></span>
         </h2>
     </div>
-    <script src="/assets/local/js/bg">
-    </script>
-
+    <script src="/assets/local/js/bg"></script>
+    <script src="/assets/local/js/countdown"></script>
 </body>
 
 <style>
