--- a/assets/html/plethora.html
+++ b/assets/html/plethora.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/local/css/main">
-    <title>gooch.dev | Home</title>
+    <title>PlethoraMC | Home</title>
 </head>
 
 <body>
 
     <canvas id="canvas"></canvas>
 
-    <script src="/assets/local/js/bg"></script>
+    <script src="/assets/local/js/pbg"></script>
 
 </body>
 
