homepage meta tags

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -2,19 +2,29 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/local/css/main">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/local/css/main" />
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="gooch.dev | Home" />
+    <meta name="description" content="The official home for Gucci Garrett, 100% not an IP grabber." />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://gooch.dev/" />
+    <meta property="twitter:title" content="gooch.dev | Home" />
+    <meta property="twitter:description" content="The official home for Gucci Garrett, 100% not an IP grabber." />
+
     <title>gooch.dev | Home</title>
 </head>
 
 <body>
-
     <canvas id="canvas"></canvas>
 
     <script src="/assets/local/js/bg"></script>
-
+    <script src="/assets/local/js/header"></script>
 </body>
 
 </html>
