update /skyblock to be the timer for the start of v2

--- a/assets/html/skyblock.html
+++ b/assets/html/skyblock.html
@@ -14,7 +14,7 @@
 
     <div class="main">
         <h2 class="center">
-            <br /> Skyblock is ending in <br />
+            <br /> Skyblock v2 is starting<br />
             <span id="countdown"></span>
         </h2>
     </div>
