appeal page updated

--- a/assets/html/appeal.html
+++ b/assets/html/appeal.html
@@ -14,13 +14,13 @@
 
     <div class="main">
         <h2 class="center">
-            This is a joke please don't take it seriously. <br />
+            <br />
             <br /> I will return in <br />
             <span id="countdown"></span>
         </h2>
     </div>
     <script src="/assets/local/js/bg"></script>
-    <script src="/assets/local/js/countdown"></script>
+    <script src="/assets/local/js/mute"></script>
 </body>
 
 <style>
