--- a/assets/html/appeal.html
+++ b/assets/html/appeal.html
@@ -14,7 +14,15 @@
 
     <div class="main">
         <h2 class="center">
+            <br /> Yeah, I deserved it this time.
+
             <br />
+            <br />
+            <img src="https://cdn.discordapp.com/attachments/927329449421201508/940454005711204392/unknown.png" alt="the setup">
+            <img src="https://cdn.discordapp.com/attachments/927329449421201508/940454026644971520/unknown.png" alt="the punchline">
+            <img src="https://cdn.discordapp.com/attachments/927329449421201508/940454365829947392/unknown.png" alt="the result">
+            <br />
+
             <br /> I will return in <br />
             <span id="countdown"></span>
         </h2>
