--- a/assets/groups/mm/html/index.html
+++ b/assets/groups/mm/html/index.html
@@ -25,6 +25,7 @@
         <div class="container ">
             <div class="row ">
                 <h2 class="title ">MetaMechanists Api Demo</h2>
+                <button type="button " class="btn btn-primary " onclick="getData() " id="refresh ">Refresh</button>
             </div>
             <div class="row ">
                 <div class="col col-hover " id="playerlist ">
