--- a/assets/groups/mm/html/index.html
+++ b/assets/groups/mm/html/index.html
@@ -25,7 +25,7 @@
         <div class="container ">
             <div class="row ">
                 <h2 class="title ">MetaMechanists Api Demo</h2>
-                <h4>Note: Currently broken due to website update.</h4>
+                <h4>Note: Currently broken due to website update, see screenshot <a href="https://media.discordapp.net/attachments/547512788537573389/943823479512379442/unknown.png ">here<a>.</h4>
                 <button type="button " class="btn btn-primary " onclick="getData() " id="refresh ">Refresh</button>
             </div>
             <div class="row ">
