--- a/assets/html/policy.html
+++ b/assets/html/policy.html
@@ -7,4 +7,4 @@
 <br>
 <p>Privacy? You're funny. I literally sell your data for personal gain.</p>
 <br>
-<p>Feel free to contact me at <a href="mailto:gooch@gooch.dev">my email</a>  with any questions. I'm not likely to respond.</p>
+<p>Feel free to contact me at <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">my email</a>  with any questions. I'm not likely to respond.</p>
